[package]
name = "crc-frame"
version = "1.0.9"
edition = "2021"
authors = ["Tyler Neely <t@jujit.su>"]
description = "simple functions for reading and writing crc32'd framed buffers"
license = "MIT/Apache-2.0"
repository = "https://github.com/komora-io/crc-frame"
documentation = "https://docs.rs/crc-frame/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3.2"
fault-injection = "1.0.9"
